--- a/index.html
+++ b/index.html
@@ -6,12 +6,30 @@
   </head>
   <body>
     <nav>
+        <ul>
+          <li><a href="#About Me">About Me</a></li>
+          <li><a href="#Academics">Academics</a></li>
+          <li><a href="#Athletics">Athletics</a></li>
+          <li><a href="#Extracurriculars">Extracurriculars</a></li>
+        </ul>
         <!-- Put your navigational links here -->
     </nav>
     <header>
+      <h1>Bunjee</h1>
+      <p>I'm an <strong>athlete</strong>, a <strong>student</strong>, and a <strong>coder</strong>.</p>
         <!-- Put your introductory content here -->
     </header>
     <main>
+      <h1 id="About Me">About Me</h1>
+        <p>I am 14 years old and I live in Bedford Stuyvesant.</p>
+      <h2 id="Academics">Academics</h2>
+        <p>I was in Contigent 38 of Prep for Prep. I am a freshman at Trinity School. My favorite subject is Spanish.</p>
+      <h3 id="Athletics">Athletics</h3>
+        <p>I love to play sports. I have played football, soccer, basketball, swimming, wrestling, track, cross country, baseball, lacrosse, kickball, and ultimate frisbee. My favorite sport is football.</p>
+      <h4 id="Extracurriculars">Extracurriculars</h4>
+        <p>Outside of school, I am in the third cohort of Code Next. It provides us with opportunities to create many cool projects like this one↓</p>
+           <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/37907286_2294268133921359_7813361976117035008_o.jpg?_nc_cat=102&_nc_ht=scontent-lga3-1.xx&oh=da9d1a05dd45ce17f311d0ab786e080e&oe=5CB37E74" title="Code Next Project" width= 450px height="600px">
+      <h5>Contacts</h5>
         <!-- Put your main content here -->
     </main>
   </body>
