--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Abolaji Awoyomi</title>
+    <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
     <nav>
         <ul>
@@ -15,7 +17,7 @@
         <!-- Put your navigational links here -->
     </nav>
     <header>
-      <h1>Bunjee</h1>
+      <h1>Abolaji Awoyomi</h1>
       <p>I'm an <strong>athlete</strong>, a <strong>student</strong>, and a <strong>coder</strong>.</p>
         <!-- Put your introductory content here -->
     </header>
@@ -23,14 +25,16 @@
       <h1 id="About Me">About Me</h1>
         <p>I am 14 years old and I live in Bedford Stuyvesant.</p>
       <h2 id="Academics">Academics</h2>
-        <p>I was in Contigent 38 of Prep for Prep. I am a freshman at Trinity School. My favorite subject is Spanish.</p>
+        <p>I was in Contigent 38 of Prep for Prep. I am a freshman at Trinity School.</p>
       <h3 id="Athletics">Athletics</h3>
-        <p>I love to play sports. I have played football, soccer, basketball, swimming, wrestling, track, cross country, baseball, lacrosse, kickball, and ultimate frisbee. My favorite sport is football.</p>
+        <p>I love to be active. I have played football, soccer, basketball, swimming, wrestling, track, cross country, baseball, lacrosse, kickball, and ultimate frisbee. I also enjoy working out. Right now, I am on my school's indoor track team.</p>
       <h4 id="Extracurriculars">Extracurriculars</h4>
         <p>Outside of school, I am in the third cohort of Code Next. It provides us with opportunities to create many cool projects like this one↓</p>
            <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/37907286_2294268133921359_7813361976117035008_o.jpg?_nc_cat=102&_nc_ht=scontent-lga3-1.xx&oh=da9d1a05dd45ce17f311d0ab786e080e&oe=5CB37E74" title="Code Next Project" width= 450px height="600px">
       <h5>Contacts</h5>
-        <!-- Put your main content here -->
+        <p>Follow me on IG: Bunjeeman27</p>
+        <p>Follow on snap: aoabattery</p>
+        <p>Email me at awoyomi.ab@gmail.com</p>
     </main>
   </body>
 </html>
