--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <li><a href="#Academics">Academics</a></li>
           <li><a href="#Athletics">Athletics</a></li>
           <li><a href="#Extracurriculars">Extracurriculars</a></li>
+          <li><a href="#Contacts">Contacts</a></li>
         </ul>
         <!-- Put your navigational links here -->
     </nav>
@@ -31,7 +32,7 @@
       <h4 id="Extracurriculars">Extracurriculars</h4>
         <p>Outside of school, I am in the third cohort of Code Next. It provides us with opportunities to create many cool projects like this one↓</p>
            <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/37907286_2294268133921359_7813361976117035008_o.jpg?_nc_cat=102&_nc_ht=scontent-lga3-1.xx&oh=da9d1a05dd45ce17f311d0ab786e080e&oe=5CB37E74" title="Code Next Project" width= 450px height="600px">
-      <h5>Contacts</h5>
+      <h5 id="Contacts">Contacts</h5>
         <p>Follow me on IG: Bunjeeman27</p>
         <p>Follow on snap: aoabattery</p>
         <p>Email me at awoyomi.ab@gmail.com</p>
