--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Abolaji Awoyomi</title>
     <link rel="stylesheet" href="style.css">
+    <background-image: https://giphy.com/gifs/trippy-psychedelic-gif-artist-l0MYtoDXdHjWavNPW("200.png");>
   </head>
 
   <body>
@@ -37,5 +38,6 @@
         <p>Follow on snap: aoabattery</p>
         <p>Email me at awoyomi.ab@gmail.com</p>
     </main>
+      <script src= "script.js"></script>
   </body>
 </html>
